fix side-bar overlapping issue

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -61,6 +61,7 @@ body {
   background-color: #ffffff;
   padding-top: 23px;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .greeting {
